[gd_scene load_steps=4 format=3 uid="uid://oxbvn8ongbbb"]

[ext_resource type="Script" uid="uid://dpxksyi58sknq" path="res://Scripts/UIs/settings.gd" id="1_cephn"]
[ext_resource type="FontFile" uid="uid://c6ru82xe18d6j" path="res://Assets/Fonts/BoldPixels1.4.ttf" id="2_cephn"]

[sub_resource type="LabelSettings" id="LabelSettings_tjlft"]
font = ExtResource("2_cephn")
font_size = 60

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_cephn")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.158472, 0.158472, 0.158472, 0.862745)

[node name="SettingsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 128.0
grow_horizontal = 2
text = "Settings"
label_settings = SubResource("LabelSettings_tjlft")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.142
anchor_top = 0.119
anchor_right = 0.858
anchor_bottom = 0.941
offset_left = -0.640015
offset_top = -0.520004
offset_right = 0.639893
offset_bottom = -0.280029

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FullScreen" type="CheckBox" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="MasterSlider" type="HSlider" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="SFXSlider" type="HSlider" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="DialogueSlider" type="HSlider" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
